deploy/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-web
  labels:
    app.kubernetes.io/name: hello-app-web
    app.kubernetes.io/part-of: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-app-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-app-web
        app.kubernetes.io/part-of: hello-app
    spec:
      containers:
        - name: web
          image: ghcr.io/adiom-data/hello-app-web:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 101
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
