deploy/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-fork-api
  labels:
    app.kubernetes.io/name: hello-app-fork-api
    app.kubernetes.io/part-of: hello-app-fork
spec:
  selector:
    app.kubernetes.io/name: hello-app-fork-api
  ports:
    - name: http
      port: 80
      targetPort: http
