deploy/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-web
  labels:
    app.kubernetes.io/name: hello-app-web
    app.kubernetes.io/part-of: hello-app
spec:
  selector:
    app.kubernetes.io/name: hello-app-web
  ports:
    - name: http
      port: 80
      targetPort: http
